# wsGripper

soft_gripper/URDF/meshes/: D435_Solid-v2.stl  base_link.stl  cable_cover_1.stl  cable_cover_2.stl  camera_cover_2.stl  camera_link.stl  hinge_finger-v21-1.stl  hinge_finger_idle-v21-1.stl  hinge_finger_idle-v21.stl  hinge_servo-v6.stl  hinge_servo_idle-v2.stl  motor_mount.stl  motor_simple-v2-2.stl  sensor_base-v53-1.stl  sensor_base-v53.stl  sensor_shell_v3-v35.stl  silicon_tip-v1.stl
soft_gripper/soft_gripper/: gripper_controller.py  gripper_ros2_node.py  main.py  waveshare_st_client.py
src/soft_gripper/: package.xml  setup.cfg  setup.py
src/soft_gripper/URDF/: URDF.urdf
src/soft_gripper/URDF/meshes/: black_gel_new-v5-1.stl  camera_cover_1.stl  hinge_finger-v21.stl  hinge_servo-v6-1.stl  hinge_servo_idle-v2-1.stl  housing_cover.stl  jetson_clamp.stl  main_housing.stl  motor_simple-v2-3.stl  sensor_connector-v79-1.stl
src/soft_gripper/config/: gripper_config.yaml
src/soft_gripper/launch/: view_gripper.launch.py
src/soft_gripper/soft_gripper/: gripper_ros2_node.py  main.py
